# ppt-agent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  app_launcher.py  build_pyinstaller.ps1  pyproject.toml  streamlit.py  utils.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
