[project]
name = "ppt-agent"
version = "1.0.0"
description = "AI 驱动的 PPT 草稿生成器"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "RomanCohort"}]
keywords = ["ppt", "ai", "streamlit", "generator", "langchain"]

dependencies = [
    "streamlit>=1.32",
    "langchain>=0.1",
    "openai>=1.14",
    "tiktoken>=0.6",
    "requests>=2.31",
    "pillow>=10.2",
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = ["pytest", "black", "pyinstaller"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
